[gd_scene load_steps=40 format=2]

[ext_resource path="res://Utilities/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Utilities/Battle/BattleGrounds.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Battlebacks/battlebgIndoorA.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Battlebacks/playerbaseIndoorA.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Battlebacks/enemybaseIndoorA.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Characters/trainer086.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Pictures/BATTLE/pokeballs.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Characters/trback000.png" type="Texture" id=8]
[ext_resource path="res://Utilities/Battle/TransitionEffects.gd" type="Script" id=9]
[ext_resource path="res://Utilities/Battle/GreyFlashing.tres" type="Animation" id=10]
[ext_resource path="res://Graphics/Transitions/vsBar86.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Transitions/vsTrainer0.png" type="Texture" id=12]
[ext_resource path="res://Fonts/pkmnem.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Graphics/Transitions/vsTrainer86.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Transitions/vs.png" type="Texture" id=15]
[ext_resource path="res://Graphics/Pictures/BATTLE/newBattleMessageBox.png" type="Texture" id=16]
[ext_resource path="res://Utilities/Battle/BattleBars.gd" type="Script" id=17]
[ext_resource path="res://Graphics/Pictures/BATTLE/battlePlayerBoxS.png" type="Texture" id=18]
[ext_resource path="res://Graphics/Pictures/BATTLE/battlePlayerHPbar.png" type="Texture" id=19]
[ext_resource path="res://Graphics/Pictures/BATTLE/battleEXPbar.png" type="Texture" id=20]
[ext_resource path="res://Graphics/Pictures/BATTLE/battleFoeBoxS.png" type="Texture" id=21]
[ext_resource path="res://Graphics/Pictures/BATTLE/battleFoeHPbar.png" type="Texture" id=22]
[ext_resource path="res://Utilities/Battle/BattleComandSelect.gd" type="Script" id=23]
[ext_resource path="res://Graphics/Pictures/BATTLE/newCommandBox.png" type="Texture" id=24]
[ext_resource path="res://Graphics/Pictures/BATTLE/commandMenuButtons.png" type="Texture" id=25]
[ext_resource path="res://Graphics/Pictures/BATTLE/selHand.png" type="Texture" id=26]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 140, 0 ), Vector2( 180, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Ball"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 28, 56, 84, 112, 140, 168, 196, 224, 252, 280, 308 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 140, -60 ), Vector2( 140, -80 ), Vector2( 140, -60 ), Vector2( 140, -55 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Toss"
length = 0.5
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeToIntroPos"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -512, 0 ), Vector2( -256, 3.173 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FoeBase:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 345, 100 ), Vector2( 382, 115 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerBase:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 105, 175 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 4.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -128, 192 ), Vector2( 128, 192 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 192 ), Vector2( 384, 192 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_Sound"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerBanner:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -198, 128 ), Vector2( 0, 128 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OpponentBanner:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 128 ), Vector2( 314, 128 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("WhiteFlash:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("WhiteFlash:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("VsIcon:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlayerBanner/Label:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("OpponentBanner/Label:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("OpponentBanner:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("VsIcon:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2, 2.05, 2.1, 2.15, 2.2, 2.25, 2.3, 2.35, 2.4, 2.45, 2.5, 2.55, 2.6, 2.65, 2.7, 2.75, 2.8, 2.85, 2.9, 2.95, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.3, 3.35, 3.4, 3.45, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ), Vector2( 262, 264 ), Vector2( 256, 270 ), Vector2( 250, 276 ), Vector2( 256, 270 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("VsIcon:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 1.5, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 8, 8 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("BlackFade:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("BlackFade:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 4, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 512, 0, 256, 128 ), Rect2( 0, 0, 256, 128 ) ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 512, 0, 256, 128 ), Rect2( 0, 0, 256, 128 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 26
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=9]
size = 26
extra_spacing_bottom = 15
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 539, 200 ), Vector2( 295, 200 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -254, -2 ), Vector2( -10, -2 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 384 ), Vector2( 0, 286 ) ]
}

[sub_resource type="Animation" id=13]
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BattleGrounds" type="Node2D" parent="CanvasLayer"]
position = Vector2( -512, 0 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="BattleBack" type="TextureRect" parent="CanvasLayer/BattleGrounds"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="PlayerBase" type="TextureRect" parent="CanvasLayer/BattleGrounds"]
margin_left = 105.0
margin_top = 175.0
margin_right = 673.0
margin_bottom = 431.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="FoeBase" type="TextureRect" parent="CanvasLayer/BattleGrounds"]
margin_left = 345.0
margin_top = 100.0
margin_right = 617.0
margin_bottom = 228.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="FoeHuman" type="Sprite" parent="CanvasLayer/BattleGrounds/FoeBase"]
position = Vector2( 140, 0 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleGrounds/FoeBase/FoeHuman"]
anims/FadeOut = SubResource( 1 )

[node name="Ball" type="Sprite" parent="CanvasLayer/BattleGrounds/FoeBase"]
visible = false
position = Vector2( 140, -60 )
texture = ExtResource( 7 )
vframes = 17
hframes = 28

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleGrounds/FoeBase/Ball"]
anims/Ball = SubResource( 2 )

[node name="PlayerToss" type="Sprite" parent="CanvasLayer/BattleGrounds"]
editor/display_folded = true
texture = ExtResource( 8 )
centered = false
offset = Vector2( 0, 150 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleGrounds/PlayerToss"]
anims/Toss = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleGrounds"]
anims/FadeToIntroPos = SubResource( 4 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/BattleGrounds"]
visible = false
margin_right = 512.0
margin_bottom = 384.0
color = Color( 0, 0, 0, 1 )

[node name="TransitionEffects" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true
visible = false
script = ExtResource( 9 )

[node name="GreyFlash" type="ColorRect" parent="CanvasLayer/TransitionEffects"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 512.0
margin_bottom = 384.0
color = Color( 0.392157, 0.392157, 0.392157, 0.392157 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/TransitionEffects"]
anims/GreyFlashing = ExtResource( 10 )

[node name="Vs" type="Node2D" parent="CanvasLayer/TransitionEffects"]
editor/display_folded = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/TransitionEffects/Vs"]
anims/SlideBars = SubResource( 5 )

[node name="SpriteLeft" type="Sprite" parent="CanvasLayer/TransitionEffects/Vs"]
editor/display_folded = true
position = Vector2( -128, 192 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 256, 128 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/TransitionEffects/Vs/SpriteLeft"]
anims/Scroll = SubResource( 6 )

[node name="SpriteRight" type="Sprite" parent="CanvasLayer/TransitionEffects/Vs"]
editor/display_folded = true
position = Vector2( 640, 192 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 256, 128 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/TransitionEffects/Vs/SpriteRight"]
anims/Scroll = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer/TransitionEffects/Vs"]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="CanvasLayer/TransitionEffects/Vs"]

[node name="PlayerBanner" type="TextureRect" parent="CanvasLayer/TransitionEffects/Vs"]
margin_left = -198.0
margin_top = 128.0
margin_bottom = 256.0
texture = ExtResource( 12 )

[node name="Label" type="RichTextLabel" parent="CanvasLayer/TransitionEffects/Vs/PlayerBanner"]
visible = false
margin_top = 128.0
margin_right = 200.0
margin_bottom = 163.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="OpponentBanner" type="TextureRect" parent="CanvasLayer/TransitionEffects/Vs"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 512.0
margin_top = 128.0
margin_right = 710.0
margin_bottom = 256.0
texture = ExtResource( 14 )

[node name="Label" type="RichTextLabel" parent="CanvasLayer/TransitionEffects/Vs/OpponentBanner"]
visible = false
margin_top = 128.0
margin_right = 200.0
margin_bottom = 163.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="VsIcon" type="Sprite" parent="CanvasLayer/TransitionEffects/Vs"]
visible = false
position = Vector2( 256, 270 )
texture = ExtResource( 15 )

[node name="WhiteFlash" type="ColorRect" parent="CanvasLayer/TransitionEffects/Vs"]
visible = false
margin_right = 512.0
margin_bottom = 384.0

[node name="BlackFade" type="ColorRect" parent="CanvasLayer/TransitionEffects/Vs"]
visible = false
modulate = Color( 1, 1, 1, 0.125 )
margin_right = 512.0
margin_bottom = 384.0
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CanvasLayer"]

[node name="BattleInterfaceLayer" type="CanvasLayer" parent="CanvasLayer"]
layer = 4

[node name="Message" type="Node2D" parent="CanvasLayer/BattleInterfaceLayer"]
editor/display_folded = true
visible = false

[node name="MessageBanner" type="TextureRect" parent="CanvasLayer/BattleInterfaceLayer/Message"]
margin_top = 288.0
margin_right = 512.0
margin_bottom = 384.0
texture = ExtResource( 16 )

[node name="Label" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/Message"]
margin_left = 25.0
margin_top = 312.0
margin_right = 485.0
margin_bottom = 379.0
custom_fonts/normal_font = SubResource( 9 )
text = "Ace gained 9000 Exp. Points! Because this is cool!"
scroll_active = false

[node name="BattleBars" type="Node2D" parent="CanvasLayer/BattleInterfaceLayer"]
editor/display_folded = true
visible = false
script = ExtResource( 17 )

[node name="PlayerBar" type="TextureRect" parent="CanvasLayer/BattleInterfaceLayer/BattleBars"]
editor/display_folded = true
margin_left = 295.0
margin_top = 200.0
margin_right = 539.0
margin_bottom = 290.0
texture = ExtResource( 18 )

[node name="HP" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/PlayerBar"]
texture = ExtResource( 19 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 202, 90 )

[node name="Tween" type="Tween" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/PlayerBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/PlayerBar"]
anims/Slide = SubResource( 10 )

[node name="HPLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/PlayerBar"]
margin_left = 60.0
margin_top = 35.0
margin_right = 195.0
margin_bottom = 60.0
custom_fonts/normal_font = SubResource( 9 )
text = "20/ 20"
scroll_active = false

[node name="LevelLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/PlayerBar"]
margin_left = 190.0
margin_top = 6.0
margin_right = 240.0
margin_bottom = 31.0
custom_fonts/normal_font = SubResource( 9 )
text = "5"
scroll_active = false

[node name="NameLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/PlayerBar"]
margin_left = 35.0
margin_top = 6.0
margin_right = 135.0
margin_bottom = 31.0
custom_fonts/normal_font = SubResource( 9 )
text = "Godot"
scroll_active = false

[node name="EXP" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/PlayerBar"]
position = Vector2( 36, 60 )
texture = ExtResource( 20 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 152, 10 )

[node name="FoeBar" type="TextureRect" parent="CanvasLayer/BattleInterfaceLayer/BattleBars"]
margin_left = -10.0
margin_top = -2.0
margin_right = 234.0
margin_bottom = 88.0
texture = ExtResource( 21 )

[node name="HP" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/FoeBar"]
texture = ExtResource( 22 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 198, 90 )

[node name="Tween" type="Tween" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/FoeBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/FoeBar"]
anims/Slide = SubResource( 11 )

[node name="NameLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/FoeBar"]
margin_left = 35.0
margin_top = 6.0
margin_right = 135.0
margin_bottom = 31.0
custom_fonts/normal_font = SubResource( 9 )
text = "Godot"
scroll_active = false

[node name="LevelLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleBars/FoeBar"]
margin_left = 175.0
margin_top = 6.0
margin_right = 225.0
margin_bottom = 31.0
custom_fonts/normal_font = SubResource( 9 )
text = "5"
scroll_active = false

[node name="BattleComandSelect" type="Node2D" parent="CanvasLayer/BattleInterfaceLayer"]
editor/display_folded = true
visible = false
position = Vector2( 0, 286 )
script = ExtResource( 23 )

[node name="Box" type="TextureRect" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
margin_right = 512.0
margin_bottom = 98.0
texture = ExtResource( 24 )

[node name="Prompt" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
margin_left = 25.0
margin_top = 10.0
margin_right = 485.0
margin_bottom = 93.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]What will Godot do?"
text = "What will Godot do?"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
anims/Slide = SubResource( 12 )

[node name="Attack" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
position = Vector2( 75, 65 )
z_index = 1
texture = ExtResource( 25 )
vframes = 2
hframes = 4

[node name="Bag" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
position = Vector2( 195, 65 )
z_index = 1
texture = ExtResource( 25 )
vframes = 2
hframes = 4
frame = 1

[node name="Poke" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
position = Vector2( 315, 65 )
z_index = 1
texture = ExtResource( 25 )
vframes = 2
hframes = 4
frame = 2

[node name="Run" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
position = Vector2( 435, 65 )
z_index = 1
texture = ExtResource( 25 )
vframes = 2
hframes = 4
frame = 3

[node name="AttackLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
margin_left = 25.0
margin_top = 70.0
margin_right = 125.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Attack"
text = "Attack"
scroll_active = false

[node name="BagLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
margin_left = 145.0
margin_top = 70.0
margin_right = 245.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Bag"
text = "Bag"
scroll_active = false

[node name="PokeLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
margin_left = 265.0
margin_top = 70.0
margin_right = 365.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Pokémon"
text = "Pokémon"
scroll_active = false

[node name="RunLable" type="RichTextLabel" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
margin_left = 385.0
margin_top = 70.0
margin_right = 485.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center]Run"
text = "Run"
scroll_active = false

[node name="SelHand" type="Sprite" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect"]
texture = ExtResource( 26 )
offset = Vector2( 0, -32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/BattleInterfaceLayer/BattleComandSelect/SelHand"]
anims/Squeez = SubResource( 13 )
